# cmake_dev_flake_template

./: CMakeLists.txt  README.md  flake.nix
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  test_example.cpp  test_example[1]_include.cmake  test_example[1]_tests.cmake
